--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "axios": "^1.6.7",
+    "i": "^0.3.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
