--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@material-ui/icons": "^4.11.3",
     "axios": "^1.6.7",
     "i": "^0.3.7",
-    "next": "14.1.0",
+    "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
