--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==5.0.3
 django-cors-headers==4.3.1
 django-filter==24.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+PyJWT==2.8.0
 pytz==2024.1
 sqlparse==0.4.4
 typing_extensions==4.10.0
