--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.4",
+    "cookie": "^0.6.0",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
