--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.4",
-    "cookie": "^0.6.0",
-    "next": "^14.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "cookie": "^0.4.1",
+    "next": "11.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
