--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.4",
     "cookie": "^0.4.1",
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
